--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
   <meta property="og:description" content="Информация о персонализации корпоративных сим-карт.">
   <meta property="og:image" content="/image.png">
 
-<!--
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
--->
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <link href="style.css" rel="stylesheet">
 </head>
