Make container fluid (full width)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <div class="container mx-auto pt-10 text-lg lg:text-center">
+  <div class="container-fluid mx-auto pt-10 text-lg lg:text-center">
     <h1 class="font-bold text-xl lg:text-4xl text-center">Подтверждение Корпоративной сим-карты на Госуслугах</h1>
     <div class="px-4 section pt-10 pb-20">
       <span class="font-bold text-3xl block text-gray-400 pb-4 text-center md:text-5xl">1</span>
