--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <body>
   <div class="container-fluid mx-auto pt-10 text-lg lg:text-center">
     <h1 class="font-bold text-xl lg:text-4xl text-center">Подтверждение Корпоративной сим-карты на Госуслугах</h1>
+
+    <div class="mx-auto mt-10 p-4 bg-green-100">
+      <a target="_blank" class="text-blue-800 font-bold border-b-2 border-dashed border-blue-700 border-opacity-50 hover:border-opacity-0" href="https://www.gosuslugi.ru/situation/registration_of_corporate_SIM_cards">Что это и зачем?</a>
+    </div>
+
     <div class="px-4 section pt-10 pb-20">
       <span class="font-bold text-3xl block text-gray-400 pb-4 text-center md:text-5xl">1</span>
       После входа на главной странице в уведомлениях должно придти сообщение «<b>Запрос на активацию корпоративной сим-карты</b>». Щёлкните мышкой по данному сообщению.
