--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="container-fluid mx-auto pt-10 text-lg lg:text-center">
     <h1 class="font-bold text-xl lg:text-4xl text-center">Подтверждение Корпоративной сим-карты на Госуслугах</h1>
 
-    <div class="mx-auto mt-10 p-4 bg-green-100">
+    <div class="mx-auto mt-10 p-4 bg-green-100 text-center">
       <a target="_blank" class="text-blue-800 font-bold border-b-2 border-dashed border-blue-700 border-opacity-50 hover:border-opacity-0" href="https://www.gosuslugi.ru/situation/registration_of_corporate_SIM_cards">Что это и зачем?</a>
     </div>
 
