--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <link href="style.css" rel="stylesheet">
+  <link href="full_style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,33 +25,33 @@
     <h1 class="font-bold text-xl lg:text-4xl text-center">Подтверждение Корпоративной сим-карты на Госуслугах</h1>
 
     <div class="mx-auto mt-10 p-4 bg-green-100 text-center">
-      <a target="_blank" class="text-blue-800 font-bold border-b-2 border-dashed border-blue-700 border-opacity-50 hover:border-opacity-0" href="https://www.gosuslugi.ru/situation/registration_of_corporate_SIM_cards">Что это и зачем?</a>
+      <a target="_blank" class="text-blue-800 font-bold border-b-2 border-dashed border-blue-700 border-opacity-50 hover:border-opacity-10" href="https://www.gosuslugi.ru/situation/registration_of_corporate_SIM_cards">Что это и зачем?</a>
     </div>
 
     <div class="px-4 section pt-10 pb-20">
       <span class="font-bold text-3xl block text-gray-400 pb-4 text-center md:text-5xl">1</span>
       После входа на главной странице в уведомлениях должно придти сообщение «<b>Запрос на активацию корпоративной сим-карты</b>». Щёлкните мышкой по данному сообщению.
-      <img class="mx-auto pt-10" src="img/step1.png" alt="Запрос на активацию корпоративной сим-карты">
+      <img class="mx-auto mt-5 border-2" src="img/step1.png" alt="Запрос на активацию корпоративной сим-карты">
     </div>
 
     <div class="px-4 section pt-10 pb-20 bg-gray-100">
       <span class="font-bold text-3xl block text-gray-400 pb-4 text-center md:text-5xl">2</span>
       Откроется «Запрос на активацию сим-карты. Проверьте номер телефона и нажмите кнопку «<b>Проверить данные</b>».
-      <img class="mx-auto pt-10" src="img/step2.png" alt="Проверка данных">
+      <img class="mx-auto mt-5 border-2" src="img/step2.png" alt="Проверка данных">
     </div>
 
     <div class="px-4 section pt-10 pb-20">
       <span class="font-bold text-3xl block text-gray-400 pb-4 text-center md:text-5xl">3</span>
       Далее проверьте данные своего паспорта. Если данные верны — нажмите кнопку «<b>Верно</b>». Если данные не совпали сообщите в Битрикс 24.
-      <img class="mx-auto pt-10" src="img/step3.png" alt="Подтверждение паспортных данных">
+      <img class="mx-auto mt-5 border-2" src="img/step3.png" alt="Подтверждение паспортных данных">
     </div>
 
 
     <div class="px-4 section pt-10 pb-20 bg-gray-100">
       <span class="font-bold text-3xl block text-gray-400 pb-4 text-center md:text-5xl">4</span>
       Нажмите кнопку «<b>Подтвердить</b>».
-      <img class="mx-auto pt-10" src="img/step4.png" alt="Подтверждение активации">
-      <img class="mx-auto pt-10" src="img/step5.png" alt="Отправка заявления">
+      <img class="mx-auto mt-5 border-2" src="img/step4.png" alt="Подтверждение активации">
+      <img class="mx-auto mt-5 border-2" src="img/step5.png" alt="Отправка заявления">
     </div>
   </div>
 </body>
