--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <link href="full_style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
