--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   <div class="container-fluid mx-auto pt-10 text-lg lg:text-center">
     <h1 class="font-bold text-xl lg:text-4xl text-center">Подтверждение Корпоративной сим-карты на Госуслугах</h1>
 
-    <div class="mx-auto mt-10 p-4 bg-green-100 text-center">
-      <a target="_blank" class="text-blue-800 font-bold border-b-2 border-dashed border-blue-700 border-opacity-50 hover:border-opacity-10" href="https://www.gosuslugi.ru/situation/registration_of_corporate_SIM_cards">Что это и зачем?</a>
+    <div class="mx-auto mt-10 p-4 bg-green-100 text-center leading-8">
+      <a target="_blank" class="text-blue-800 font-bold border-b-2 border-dashed border-blue-700 border-opacity-50 hover:border-opacity-10" href="https://www.gosuslugi.ru/situation/registration_of_corporate_SIM_cards">Что это и зачем?</a><br>
+      <a target="_blank" class="text-blue-800 font-bold border-b-2 border-dashed border-blue-700 border-opacity-50 hover:border-opacity-10" href="https://www.sberbank.ru/ru/person/dist_services/gosuslugi/accounting_confirmation">У меня нет госуслуг, но есть карта Сбербанка</a>
     </div>
 
     <div class="px-4 section pt-10 pb-20">
